axum-myroutes/tests/ui/fail_route_attr_unknown_arg.stderr
error: unknown argument `foobar`
  --> tests/ui/fail_route_attr_unknown_arg.rs:13:36
   |
13 |     #[get("/", handler = _handler, foobar = 1)]
   |                                    ^^^^^^

error[E0425]: cannot find type `Route` in this scope
  --> tests/ui/fail_route_attr_unknown_arg.rs:10:10
   |
10 | #[derive(Clone)]
   |          ^^^^^ not found in this scope
   |
help: consider importing this struct
   |
 4 + use axum::routing::Route;
   |

error[E0433]: failed to resolve: use of undeclared type `Route`
  --> tests/ui/fail_route_attr_unknown_arg.rs:10:10
   |
10 | #[derive(Clone)]
   |          ^^^^^ use of undeclared type `Route`
   |
help: consider importing this struct
   |
 4 + use axum::routing::Route;
   |
